Closed
Bug 1270997
Opened 9 years ago
Closed 9 years ago
Send invalidations for the first image frame properly
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
mozilla49
Tracking | Status | |
---|---|---|
firefox49 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
2.21 KB,
patch
|
seth
:
review+
|
Details | Diff | Splinter Review |
Regression from bug 1194059, explanation in the commit message of patch.
Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8749883 -
Flags: review?(seth)
Comment 2•9 years ago
|
||
Comment on attachment 8749883 [details] [diff] [review]
patch
Review of attachment 8749883 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good!
Attachment #8749883 -
Flags: review?(seth) → review+
Comment 4•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in
before you can comment on or make changes to this bug.
Description
•